# static_initialization_order_fiasco

./: CMakeLists.txt  code.cpp  fiasco.md  header.h
